[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Images/slom.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/enemy_runner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.84553, 7.58154 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.7545, 16.7132 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 512
collision_mask = 512
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="OnGround" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="GroundToLeft" type="RayCast2D" parent="."]
position = Vector2( -18, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 513

[node name="GroundToRight" type="RayCast2D" parent="."]
position = Vector2( 18, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 513
